# Trading

./: .dockerignore  .gitignore  ANALIZ_RAPORU.md  README.md  debug_validation.py  debug_yf.py  demo.py  dev.sh  docker-compose.local.yml  docker-compose.yml  portfolio.db  pyproject.toml  test_analyzer.py  test_email.py  trading_strategy.md  training_log.txt
binance_models/: binance_ppo_short_agent.ckpt
bist100_models/: CLAUDE.md  binance_ppo_short_agent.ckpt  bist100_TradingEnv-v0_PPO_cpu_best_avg.ckpt  bist100_TradingEnv-v0_PPO_cpu_last.ckpt  bist100_ppo_short_agent.ckpt  bist100_ppo_short_mid_agent.ckpt  nice1.ckpt  nice7.ckpt  s.ckpt
docker/: Dockerfile.backend  Dockerfile.frontend
financia/: CLAUDE.md  analyzer.py  backtest.py  binance_data_generator.py  bist100_tickers.py  data_generator.py  email_config.py  eod_service.py  evaluate.py  get_model_decision.py  indicator_config.py  notification_service.py  scanner.py  simulation_scanner.py  train.py
financia/envs/: __init__.py  trading_env.py
financia/strategies/: __init__.py  base.py  ema_macd.py  inside_bar_breakout.py  resistance_stoch_rsi.py
financia/ui/: package-lock.json  package.json  tailwind.config.js  vite.config.js
financia/ui/src/: App.jsx  index.css  main.jsx
financia/ui/src/components/: BacktestResultsModal.jsx  (+14 more)
financia/web_api/: database.py  main.py  state.py  websocket_manager.py
financia/web_api/routers/: binance.py  bist100.py  recommendations.py  simulation.py  strategies.py
models/: TradingEnv-v0_PPO_cpu_best_avg.ckpt  TradingEnv-v0_PPO_cpu_last.ckpt  ppo_short_agent.ckpt
(+3 files in other folders)
