[project]
name = "teknikanaliz"
version = "0.1.0"
description = ""
authors = [
    {name = "melikbugra",email = "melikbugraozcelik@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yfinance (>=0.2.40,<1.0.0)",
    "pandas (>=2.0.0,<3.0.0)",
    "pyarrow (>=19.0.0,<20.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "rl-baselines @ git+https://github.com/melikbugra/rl-baselines.git",
    "shimmy (>=2.0.0,<3.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "websockets (>=13.0,<15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
